# python_scraping_sample

./: .gitignore  README.md  pyproject.toml
src/: requests_with_retry.py
src/beautifulsoup/: simple.py
src/puppeteer/: download_as_pdf.js  download_as_snapshot.js  download_with_DownloadBehavior.js  download_with_DownloadBehavior_attachment.js  download_with_buffer.js  download_with_request_promise.js  package-lock.json  package.json
src/pyppeteer/: download_binary_by_click.py  download_binary_directory.py  download_with_another_request.py  download_with_browser_download.py  multi_process.py  simple.py  wait_for_function.py
src/requests/: simple.py  with_retry.py
src/requests_html/: headless_browser.py  simple.py
src/scrapy/execute_from_script/: main.py
src/scrapy/item_pipeline/: main.py
src/scrapy/item_pipeline_yield_item_and_request/: items.py  main.py  pipelines.py
src/scrapy/link_extractor/: main.py
src/scrapy/multiprocess/: main.py
src/scrapy/sitemap_spider/: main.py
src/scrapy/tutorial/tutorial/spiders/: quotes_spider.py
